--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -34,7 +34,6 @@ ol.arabic     { list-style-type: decimal }
 }
 :link:hover, :visited:hover {
  background-color: #eee;
- border-bottom: 1px solid #ddd; 
  color: #555;
 
  }
@@ -118,7 +117,7 @@ label.disabled { color: #d7d7d7 }
 /* Main navigation bar */
 #mainnav {
  background: #f7f7f7 url(../topbar_gradient.png) top left;
- border: 1px solid #555;
+ border: 1px solid #000;
  font: normal 10px verdana,'Bitstream Vera Sans',helvetica,arial,sans-serif;
  height: 1.6em;
  margin: .66em 0 .33em;
@@ -139,15 +138,15 @@ label.disabled { color: #d7d7d7 }
  padding: .1em 20px;
 }
 #mainnav .active:link, #mainnav .active:visited {
- background: #d7d7d7 url(../topbar_active.png) top left repeat-x;
- background: #000;
- color: #f7f7f7;
+ background: #333 url(../topbar_gradient2.png) top left repeat-x;
+ color: #eee;
  border-top: none;
  border-right: none !important;
+ border-right: 1px solid #000;
  font-weight: bold;
 }
 #mainnav :link:hover, #mainnav :visited:hover {
- background-color: #d7d7d7;
+ background-color: #ccc;
  border-right: 1px solid #ddd;
 }
 /* Context-dependent navigation links */
