Fresh icons, nicer looking timeline.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1070 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -27,7 +27,7 @@
  padding: .5em 0;
  margin: 0 0 2em 1em;
  float: right;
- border: 1px solid #ddc;
+ border: 1px outset #ddc;
  background: #ffd;
  font-size: 85%;
  position: relative;
