--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -1,19 +1,19 @@
 @import url(code.css);
 
-#content { margin-top: 1.5em; width: 700px; max-width: 100% }
+#content { width: 700px; max-width: 100% }
 
 #newticket #description { width: 100% }
 #newticket #properties { width: 100% }
 
-#ticket { 
+#ticket {
  background: #ffd;
  border: 1px outset #996;
- padding: 1em;
+ margin-top: 1em;
+ padding: .5em 1em;
  position: relative;
 }
-#ticket h1, #ticket h2 { margin: 0 }
-#ticket h2 { font-weight: normal; font-size: 150%; margin-bottom: 1em }
-#ticket .date { color: #996; float: right; position: relative }
+#ticket h2 { margin: 0 0 1em }
+#ticket .date { color: #996; float: right; font-size: 85%; position: relative }
 
 #ticket table { table-layout: fixed; border-collapse: collapse; width: 100% }
 #ticket tr { border-bottom: 1px dotted #eed }
