Show property modifications in changesets. Closes #208. ''Requires resync to see property changes on directories in older changesets.''
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1103 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -18,3 +18,6 @@
  margin-top: 0;
 }
 #overview .files { padding: 1px 0 }
+
+.diff ul.props { font-size: 90%; list-style: disc; margin: .5em 0 0; padding: 0 .5em 1em 2em }
+.diff ul.props li { margin: 0; padding: 0 }
