Fix various problems in the changeset view introduced in [1103].
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1105 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -62,8 +62,7 @@
  font-size: 14px;
  letter-spacing: normal;
  margin: 0 auto;
- padding: .1em 0 .25em;
- text-align: center;
+ padding: .1em 0 .25em .5em;
 }
 
 /* Styles for the actual diff tables (side-by-side and inline) */
