--- a/htdocs/css/changeset.css
+++ b/htdocs/css/changeset.css
@@ -12,6 +12,13 @@
  overflow: hidden;
  width: .8em; height: .8em;
 }
+#overview div.add div, #overview div.cp div, #overview div.mv div {
+ border: 0;
+ margin: 0;
+ float: right;
+ width: .35em; 
+}
+
 #overview .message { padding: 1em 0 1px }
 #overview dd.message p, #overview dd.message ul, #overview dd.message ol {
  margin-bottom: 1em;
