Improved style rules for printing:  * Don't print buttons (e.g. the "Edit this Page" button). Closes #971.  * Don't print highlighting of search terms.  * Don't print the "Add/Change" ticket headline.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1128 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -354,13 +354,15 @@ div.system-message p { margin: 0; }
 div.system-message p.system-message-title { font-weight: bold; }
 
 /* Styles for search word highlighting */
-.searchword0 { background: #ff9 }
-.searchword1 { background: #cfc }
-.searchword2 { background: #cff }
-.searchword3 { background: #ccf }
-.searchword4 { background: #fcf }
+@media screen {
+ .searchword0 { background: #ff9 }
+ .searchword1 { background: #cfc }
+ .searchword2 { background: #cff }
+ .searchword3 { background: #ccf }
+ .searchword4 { background: #fcf }
+}
 
 @media print {
  #header, #altlinks, #footer { display: none }
- .nav, form { display: none }
+ .nav, form, .buttons form { display: none }
 }
