Make sure there's space between the navbar and the content, even when there's no context navigation.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1130 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -137,6 +137,7 @@ label.disabled { color: #d7d7d7 }
 }
 
 /* Context-dependent navigation links */
+#ctxtnav { height: 1em }
 #ctxtnav li ul {
  background: #f7f7f7;
  color: #ccc;
