* Cleaned up wiki link formatting to reduce duplicate, inconsistent code.  * Links to non-existing wiki pages, tickets and changesets get a {{{rel="nofollow"}}} attribute.  * All links get a class name corresponding to the object type ("ticket", "changeset", etc).  * Closed tickets are no longer enclosed in <del></del> tags, but instead are striked-out by having the class "closed".
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1224 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -234,8 +234,9 @@ label.disabled { color: #d7d7d7 }
 #prefs .buttons { text-align: right }
 
 /* Wiki */
-a.missing:link,a.missing:visited { background: #fafaf0; color: #998 }
+a.missing:link, a.missing:visited { background: #fafaf0; color: #998 }
 a.missing:hover { color: #000; }
+a.closed:link, a.closed:visited { text-decoration: line-through }
 
 .wikitoolbar {
  border: solid #d7d7d7;
