Refactored the wiki module, split up the huge {{{render()}}} method into separate methods for rendering the different views/actions.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1228 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -11,7 +11,7 @@
 #changeinfo .options { padding: 0 0 1em 1em }
 #changeinfo .options, #changeinfo .buttons { clear: left }
 #delete { margin-left: 6em }
-#preview { background: #f4f4f4 url(../draft.png); margin-top: 2em }
+#preview { background: #f4f4f4 url(../draft.png); margin: 1em 0 2em }
 
 /* Styles for the page history table
    (extends the styles for "table.listing") */
