Show both the creation time and the last modified time in the ticket header, as relative "ages". Closes #488.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1253 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/ticket.css
+++ b/htdocs/css/ticket.css
@@ -14,6 +14,7 @@
 }
 #ticket h2 { margin: 0 0 1em }
 #ticket .date { color: #996; float: right; font-size: 85%; position: relative }
+#ticket .date p { margin: 0 }
 
 #ticket table {
  border-top: 1px solid #dd9;
