Cleaned up attachment support. Closes #1029, #1112, #1264 and #1351.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1443 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -293,6 +293,7 @@ table.wiki td { border: 1px solid #ccc;  padding: .1em .25em; }
 #attachment fieldset { margin-top: 2em }
 #attachment fieldset .field { float: left; margin: 0 1em .5em 0 }
 #attachment br { clear: left }
+.attachment #preview { margin-top: 1em }
 
 /* Styles for tabular listings such as those used for displaying directory
    contents and report results. */
