The timeline template shouldn't know about the set of available filters.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1453 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -1,6 +1,7 @@
 /* Timeline */
 
 * html #prefs { width: 34em } /* Set width only for IE */
+#prefs fieldset label { display: block }
 #prefs .buttons { margin-top: -1.6em }
 
 h2 {
