The browser now shows the size of the files, in a sortable column. Closes #1426.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1507 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -18,6 +18,13 @@ h1 .sep { color: #666; padding: 0 .1em }
  color: #888;
  white-space: nowrap;
 }
+#dirlist td.size {  
+ color: #888;
+ white-space: nowrap;
+ text-align: right;
+ vertical-align: middle;
+ font-size: 9px;
+}
 #dirlist td.name { width: 100% }
 #dirlist td.name a, #dirlist td.name span {
  background-position: 0% 50%;
