Highlight the copy operations in the revision log. This should close #1428.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1515 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -42,6 +42,7 @@ h1 .sep { color: #666; padding: 0 .1em }
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist { margin-top: 0 }
+#chglist td.old_path { font-weight: bold }
 #chglist td.date { white-space: nowrap }
 #chglist td.rev, #chglist td.chgset { text-align: center }
 #chglist td.rev a, #chglist td.chgset a { border-bottom: none }
