Display IP address on wiki diff page.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1523 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/wiki.css
+++ b/htdocs/css/wiki.css
@@ -17,6 +17,13 @@
  overflow: auto;
 }
 
+/* Diff view */
+#overview .ipnr {
+ color: #999;
+ font-size: 80%;
+}
+#overview .comment { padding: 1em 0 0 }
+
 /* Heading anchors */
 .anchor:link, .anchor:visited {
  border: none;
