Enhanced Revision Log.
The normal ''node'' history now highlights the add/modify/copy events (#1428)
and there's a new alternate revision log that focus on the ''path'' history.
The two are well integrated and one can for example easily go to the ''node''
history of any of the copy change listed in the path history, in case there
has been multiple add/delete or copy/delete on that path.

This implements #1441.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1540 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -1,4 +1,5 @@
 @import url(code.css);
+@import url(diff.css);
 
 /* Browser */
 h1 { margin: 0; padding: 0 0 .5em }
@@ -42,7 +43,16 @@ h1 .sep { color: #666; padding: 0 .1em }
 /* Styles for the revision log table
    (extends the styles for "table.listing") */
 #chglist { margin-top: 0 }
-#chglist td.old_path { font-weight: bold }
+#chglist td.change { 
+ white-space: nowrap; 
+}
+#chglist td.change div { 
+ border: 1px solid #999;
+ margin: .2em .5em 0 0;
+ width: .8em; height: .8em;
+}
+#chglist td.change .comment { display: none }
+#chglist td.old_path { font-style: italic }
 #chglist td.date { white-space: nowrap }
 #chglist td.rev, #chglist td.chgset { text-align: center }
 #chglist td.rev a, #chglist td.chgset a { border-bottom: none }
