Additional clean-ups and features for the revision log.
Clean-ups:
 * the versioncontrol layer no longer deals with the ''limit'' parameter
 * the Pager utility class is removed
 * the page history in URL is now correctly optimized when the path
   remains the same

Now the revision log has a preference panel, for:
 * setting the starting revision of the log, and optionally
   the ending revision (will be useful for building change reports)
 * setting the number of revisions visible in one page
 * optionally following the copy operations
 * optionally showing the full log message instead of the abbreviated form

 


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1552 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -1,6 +1,9 @@
 @import url(code.css);
 @import url(diff.css);
 
+* html #prefs { width: 34em } /* Set width only for IE */
+#prefs .buttons { margin-top: -1.6em }
+
 /* Browser */
 h1 { margin: 0; padding: 0 0 .5em }
 h1 :link, h1 :visited, h1 .filename { border: none; padding: 0 .2em }
