Revision log: the revision log mode is now selected in the preference panel.
This means the ''Switch to path history''/''Switch to node history'' navigation links
are now gone. Instead, one chooses between:
 * Stop on copy
 * Follow copy operations
 * Show only add, move and delete operations

Also, when shown, the full log message is now correctly formatted.


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1557 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -2,6 +2,7 @@
 @import url(diff.css);
 
 * html #prefs { width: 34em } /* Set width only for IE */
+#prefs fieldset label { display: block }
 #prefs .buttons { margin-top: -1.6em }
 
 /* Browser */
