Revision Log: fixed the ''path history'', a.k.a. ''show only add/copy/delete ops'' mode (see #1441)
In this mode, the ''copyfrom'' information is now displayed
as it is in the ''stop on copy'' mode.




git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1558 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -23,6 +23,7 @@
 #chglist .add, #overview .add, .diff #legend .add { background: #bfb }
 #chglist .copy, #overview .cp, .diff #legend .cp { background: #88f }
 #chglist .move, #overview .mv, .diff #legend .mv { background: #ccc }
+#chglist .unknown { background: #fff }
 
 /* Legend for diff colors */
 .diff #legend {
