* Enforce {{{CONFIG_VIEW}}} permission for viewing "about plugins" page.  * Improve header styling of "about configuration" page.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1587 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/about.css
+++ b/htdocs/css/about.css
@@ -9,6 +9,9 @@
  text-align: right;
  vertical-align: top;
 }
+#content.about_config th.name, #content.about_config th.value {
+ text-align: left;
+}
 #content.about_config th, #content.about_config td {
  border: 1px solid #ddd;
  padding: 3px;
