Added a new ITimelineEventProvider, for showing ticket update details in the timeline.
This optional feature can be disabled by adding the following line to the {{{trac.ini}}}:

{{{ 
[disabled_components] 
Trac.Ticket.UpdateDetailsForTimeline = yes
}}}

This closes #187.



git-svn-id: http://svn.edgewall.org/repos/trac/trunk@1594 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/timeline.css
+++ b/htdocs/css/timeline.css
@@ -41,6 +41,7 @@ dd {
 /* Apply icon background-image twice to avoid hover-flicker in IE/Win */
 dt.changeset, dt.changeset a { background-image: url(../changeset.png) !important }
 dt.newticket, dt.newticket a { background-image: url(../newticket.png) !important }
+dt.editedticket, dt.editedticket a { background-image: url(../editedticket.png) !important }
 dt.closedticket, dt.closedticket a { background-image: url(../closedticket.png) !important }
 dt.wiki, dt.wiki a { background-image: url(../wiki.png) !important }
 dt.milestone, dt.milestone a { background-image: url(../milestone.png) !important }
