--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -91,6 +91,19 @@ h1 .sep { color: #666; padding: 0 .1em }
 #info .message ul { padding: 0; margin: 0 2em }
 #info .message p { margin: 0; padding: 0 }
 
+#props { 
+ background: #f7f7f0;
+ border: 1px solid #d7d7d7;
+ border-collapse: collapse;
+ border-spacing: 0;
+ clear: both;
+ width: 100%;
+ margin-bottom: 1em;
+}
+#props ul { font-size: 90%; list-style: disc; margin: 0 0 0; padding: 0 0 0 2em }
+#props ul li { margin: 0; padding: 0 }
+
+
 /* Styles for the HTML preview */
 #preview { background: #fff; clear: both; margin: 0 }
 #preview .code-block { border-top: 1px solid #999; margin: 0 }
